--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@mui/material": "^5.11.12",
     "@types/node": "18.15.1",
     "@types/react": "18.0.28",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "18.0.11",
     "aws-amplify": "^5.0.20",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-color": "^2.19.3",
+    "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
   }
