--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
+    "@mui/styles": "^5.12.0",
+    "@mui/x-data-grid": "^6.2.1",
     "@types/node": "18.15.1",
     "@types/react": "18.0.28",
     "@types/react-color": "^3.0.6",
