--- a/package.json
+++ b/package.json
@@ -10,28 +10,26 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^4.6.0",
-    "@aws-amplify/ui-react-storage": "^1.1.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
-    "@mui/styles": "^5.12.0",
+    "@mui/system": "^5.13.2",
     "@mui/x-data-grid": "^6.2.1",
     "@mui/x-date-pickers": "^6.4.0",
-    "@types/node": "18.15.1",
     "@types/react": "18.0.28",
-    "@types/react-color": "^3.0.6",
-    "@types/react-dom": "18.0.11",
     "aws-amplify": "^5.0.20",
     "date-fns": "^2.30.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-color": "^2.19.3",
     "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@types/node": "20.2.3",
+    "eslint-plugin-unused-imports": "^2.0.0"
   }
 }
