--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -46,7 +46,7 @@
         "socialProviders": [],
         "usernameAttributes": [],
         "verificationMechanisms": [
-          "PHONE_NUMBER"
+          "EMAIL"
         ]
       },
       "providerPlugin": "awscloudformation",
