added facebook and google

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -43,7 +43,10 @@
           "passwordPolicyMinLength": 8
         },
         "signupAttributes": [],
-        "socialProviders": [],
+        "socialProviders": [
+          "FACEBOOK",
+          "GOOGLE"
+        ],
         "usernameAttributes": [],
         "verificationMechanisms": [
           "EMAIL"
