--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -81,11 +81,20 @@
   },
   "hosting": {
     "amplifyhosting": {
+      "lastPushTimeStamp": "2023-03-13T18:21:11.170Z",
       "service": "amplifyhosting",
       "type": "cicd"
     }
   },
   "parameters": {
+    "AMPLIFY_function_centroestivo7d1e9a7cPostConfirmation_GROUP": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "centroestivo7d1e9a7cPostConfirmation"
+        }
+      ]
+    },
     "AMPLIFY_function_centroestivo7d1e9a7cPostConfirmation_deploymentBucketName": {
       "usedBy": [
         {
