--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/x-date-pickers": "^6.4.0",
     "@types/react": "18.0.28",
     "aws-amplify": "^5.0.20",
+    "axios": "^1.6.8",
     "date-fns": "^2.30.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
